--- a/mystyle.css
+++ b/mystyle.css
@@ -11,50 +11,124 @@ h1 {
     color: #66BFBF;
     line-height: 2;
 }
-h2{
+
+h2 {
     color: #66BFBF;
     font-family: 'Merriweather', serif;
     font-size: 2.5rem;
     font-weight: normal;
 }
-h3{
+
+h3 {
     font-family: 'Merriweather', serif;
 }
-.Me{
+
+img {
+    width: 70%;
+}
+a{
+    color: #3498db;
+    font-family: 'Merriweather', serif;
+    margin: 10px 20px;
+    text-decoration: none;
+}
+a:hover{
+    color: #EAF6F6;
+}
+p {
+    line-height: 2;
+}
+
+hr {
+    border: dotted #87e5e5 6px;
+    margin: 100px auto;
+    width: 4%;
+    border-bottom: none;
+}
+
+.bottom-cloud {
+    position: absolute;
+    bottom: 300px;
+    left: 300px;
+}
+
+.top-cloud {
+    position: absolute;
+    top: 50px;
+    right: 300px;
+}
+
+.skill-row {
+    width: 50%;
+    margin: 100px auto;
+    text-align: left;
+}
+
+.Me {
     width: 200px;
 }
-.human{
+
+.human {
     width: 30%;
     float: left;
     margin-right: 25px;
 }
-.top-cloud,.bottom-cloud{
-    width: 100px;
-}
-img{
-    width: 70%;
-}
-.skill-row{
-    width: 50%;
-    margin: 100px auto;
-    text-align: left;
-    line-height: 2;
-}
-.bottom-cloud {
-    position:absolute;
-    bottom: 300px;
-    left: 300px;
-}
-.top-cloud {
-    position:absolute;
-    top: 50px;
-    right: 300px;
-}
+
 .Intro {
     background-color: aquamarine;
     position: relative;
     padding-top: 100px;
 }
-.profile{
+
+.top-cloud,
+.bottom-cloud {
+    width: 100px;
+}
+
+.profile {
     margin: 100px 0;
+}
+
+.para {
+    width: 35%;
+    margin: auto;
+    margin-bottom: 30px;
+}
+
+.btn {
+    background: #3498db;
+    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+    background-image: -o-linear-gradient(top, #3498db, #2980b9);
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    font-family: 'Merriweather', serif;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+}
+
+.btn:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+}
+
+.bottom-container {
+    margin-top: 20px;
+    background-color: #66BFBF;
+    padding: 50px 0 20px;
+}
+.copyright{
+    color: #EAF6F6;
+    font-size: 0.75rem;
+    padding: 20px 0;
 }
